--- a/index.html
+++ b/index.html
@@ -98,7 +98,65 @@
           </div>
         </div>
       </div>
-      <div class="content"></div>
+      <div class="content">
+        <div class="project">
+          <p>Your projects</p>
+          <div class="project-container">
+            <div class="project-card">
+              <div class="card-title">project name</div>
+              <div class="card-description">
+                Lorem ipsum dolor sit, amet consectetur
+              </div>
+              <div class="card-btn">
+                <a><img src="./images/github.png" alt="github-icon" /></a>
+                <a><img src="./images/demo.png" alt="demo-icon" /></a>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="card-title">project name</div>
+              <div class="card-description">
+                Lorem ipsum dolor sit, amet consectetur
+              </div>
+              <div class="card-btn">
+                <a><img src="./images/github.png" alt="github-icon" /></a>
+                <a><img src="./images/demo.png" alt="demo-icon" /></a>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="card-title">project name</div>
+              <div class="card-description">
+                Lorem ipsum dolor sit, amet consectetur
+              </div>
+              <div class="card-btn">
+                <a><img src="./images/github.png" alt="github-icon" /></a>
+                <a><img src="./images/demo.png" alt="demo-icon" /></a>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="card-title">project name</div>
+              <div class="card-description">
+                Lorem ipsum dolor sit, amet consectetur
+              </div>
+              <div class="card-btn">
+                <a><img src="./images/github.png" alt="github-icon" /></a>
+                <a><img src="./images/demo.png" alt="demo-icon" /></a>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="card-title">project name</div>
+              <div class="card-description">
+                Lorem ipsum dolor sit, amet consectetur
+              </div>
+              <div class="card-btn">
+                <a><img src="./images/github.png" alt="github-icon" /></a>
+                <a><img src="./images/demo.png" alt="demo-icon" /></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="announcement"><p>Anouncements</p></div>
+        <div class="trending"><p>Trending</p></div>
+      </div>
     </div>
     <script></script>
   </body>
