Added anouncement and trending

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <p>Your projects</p>
           <div class="project-container">
             <div class="project-card">
-              <div class="card-title">project name</div>
+              <div class="card-title">super cool project</div>
               <div class="card-description">
                 Lorem ipsum dolor sit, amet consectetur
               </div>
@@ -113,9 +113,11 @@
               </div>
             </div>
             <div class="project-card">
-              <div class="card-title">project name</div>
+              <div class="card-title">impossible app</div>
               <div class="card-description">
-                Lorem ipsum dolor sit, amet consectetur
+                Sed assumenda deserunt earum. Quasi quidem, cupiditate eligendi
+                nulla praesentium suscipit totam odit officia earum error
+                inventore nesciunt reprehenderit saepe aut dolore.
               </div>
               <div class="card-btn">
                 <a><img src="./images/github.png" alt="github-icon" /></a>
@@ -123,9 +125,11 @@
               </div>
             </div>
             <div class="project-card">
-              <div class="card-title">project name</div>
+              <div class="card-title">less cool project</div>
               <div class="card-description">
-                Lorem ipsum dolor sit, amet consectetur
+                Sunt modi et debitis cupiditate placeat doloremque voluptatum
+                eligendi dignissimos nulla est ad quos veniam! Illo, modi?Lorem
+                ipsum dolor sit amet consectetur adipisicing elit.
               </div>
               <div class="card-btn">
                 <a><img src="./images/github.png" alt="github-icon" /></a>
@@ -133,9 +137,10 @@
               </div>
             </div>
             <div class="project-card">
-              <div class="card-title">project name</div>
+              <div class="card-title">easy peasy project</div>
               <div class="card-description">
-                Lorem ipsum dolor sit, amet consectetur
+                Delectus sequi recusandae porro ea illum.Lorem ipsum dolor sit,
+                amet consectetur
               </div>
               <div class="card-btn">
                 <a><img src="./images/github.png" alt="github-icon" /></a>
@@ -143,9 +148,21 @@
               </div>
             </div>
             <div class="project-card">
-              <div class="card-title">project name</div>
+              <div class="card-title">money maker</div>
               <div class="card-description">
-                Lorem ipsum dolor sit, amet consectetur
+                Recusandae porro ea illum.Lorem ipsum dolor sitorem ipsum dolor
+                sit, amet consectetur
+              </div>
+              <div class="card-btn">
+                <a><img src="./images/github.png" alt="github-icon" /></a>
+                <a><img src="./images/demo.png" alt="demo-icon" /></a>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="card-title">ad blocker</div>
+              <div class="card-description">
+                Imos nulla est ad quos veniam! Illo, modi?Lorem ipsum dolor sit
+                amorem ipsum dolor sit, amet consectetur
               </div>
               <div class="card-btn">
                 <a><img src="./images/github.png" alt="github-icon" /></a>
@@ -154,10 +171,73 @@
             </div>
           </div>
         </div>
-        <div class="announcement"><p>Anouncements</p></div>
-        <div class="trending"><p>Trending</p></div>
+        <div class="anouncement">
+          <p>Anouncements</p>
+          <div class="anouncement-container">
+            <div>
+              <p class="anouncement-title">site maintenance</p>
+              <p>Consequuntur quae ea alias ipsum, soluta reiciendis!</p>
+            </div>
+            <div>
+              <p class="anouncement-title">community share day</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div>
+              <p class="anouncement-title">updated privacy policy</p>
+              <p>Id repellat nobis modi dolorum tempore corrupti?</p>
+            </div>
+          </div>
+        </div>
+        <div class="trending">
+          <p>Trending</p>
+          <div class="trending-container">
+            <div>
+              <img
+                src="./profiles/1.png"
+                alt="profile1-icon"
+                class="trending-profile"
+              />
+              <div>
+                <p>@tegan</p>
+                <p>World Peace Builder</p>
+              </div>
+            </div>
+            <div>
+              <img
+                src="./profiles/2.png"
+                alt="profile2-icon"
+                class="trending-profile"
+              />
+              <div>
+                <p>@morgan</p>
+                <p>Super Cool Project</p>
+              </div>
+            </div>
+            <div>
+              <img
+                src="./profiles/3.png"
+                alt="profile3-icon"
+                class="trending-profile"
+              />
+              <div>
+                <p>@kendall</p>
+                <p>Life Changing App</p>
+              </div>
+            </div>
+            <div>
+              <img
+                src="./profiles/4.png"
+                alt="profile4-icon"
+                class="trending-profile"
+              />
+              <div>
+                <p>@alex</p>
+                <p>No Traffic Maker</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <script></script>
   </body>
 </html>
