--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
               <div class="card-title">impossible app</div>
               <div class="card-description">
                 Sed assumenda deserunt earum. Quasi quidem, cupiditate eligendi
-                nulla praesentium suscipit totam odit officia earum error
-                inventore nesciunt reprehenderit saepe aut dolore.
+                nulla praesentium suscipit totam odit.
               </div>
               <div class="card-btn">
                 <a><img src="./images/github.png" alt="github-icon" /></a>
@@ -128,8 +127,7 @@
               <div class="card-title">less cool project</div>
               <div class="card-description">
                 Sunt modi et debitis cupiditate placeat doloremque voluptatum
-                eligendi dignissimos nulla est ad quos veniam! Illo, modi?Lorem
-                ipsum dolor sit amet consectetur adipisicing elit.
+                eligendi.
               </div>
               <div class="card-btn">
                 <a><img src="./images/github.png" alt="github-icon" /></a>
