Added theme invertingand resizing

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           <div class="search-bar"></div>
         </div>
         <div class="search-profile">
+          <img src="./images/increase.png" alt="svg" onclick="increaseFont()" />
+          <img src="./images/decrease.png" alt="svg" onclick="decreaseFont()" />
           <img
             src="./images/invert-colors.svg"
             alt="svg"
@@ -237,5 +239,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
